# video-ai-analyzer

./: README.md
backend/: client_test.py  conversation_manager.py  requirements.txt  storage.py  test.py
backend/agents/: base_agent.py  generation_agent.py  query_agent.py  summarization_agent.py  transcription_agent.py  vision_agent.py
backend/conversations/: 2026-02-16T10-37-59.json  2026-02-16T11-05-15.json  2026-02-16T11-13-46.json  2026-02-16T14-01-31.json  2026-02-16T14-18-28.json  2026-02-16T15-08-14.json  2026-02-17T10-30-39.json  2026-02-17T11-04-24.json  2026-02-17T11-20-48.json  2026-02-17T11-41-57.json  2026-02-17T11-47-14.json  2026-02-17T12-45-10.json  2026-02-17T12-54-45.json  2026-02-17T13-04-57.json  2026-02-17T13-19-29.json  2026-02-17T14-59-20.json  2026-02-18T15-23-49.json  2026-02-18T15-40-46.json  2026-02-18T15-57-40.json  2026-02-18T16-17-16.json  2026-02-18T16-29-04.json  2026-02-18T16-48-06.json  2026-02-18T16-52-31.json  2026-02-18T17-01-51.json  2026-02-18T17-25-52.json  2026-02-19T03-42-06.json  2026-02-19T07-46-35.json  2026-02-19T07-57-17.json  2026-02-19T08-10-06.json  2026-02-19T08-17-37.json  2026-02-19T08-25-12.json  2026-02-19T08-36-30.json  2026-02-19T09-54-02.json  2026-02-19T10-08-17.json  2026-02-19T10-24-36.json  2026-03-14T17-12-19.json  2026-03-14T17-34-22.json  2026-03-14T18-01-08.json  2026-03-15T03-42-57.json  (+35 more)
frontend/: package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/proto/: video_analyzer.proto
frontend/src-tauri/src/: main.rs
(+45 files in other folders)
