[package]
name = "video-ai-analyzer"
version = "0.1.0"
description = "Video AI Analyzer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]

[package.metadata.tauri-winres]
OriginalFilename = "video-ai-analyzer.exe"
FileDescription = "Video AI Analyzer"
ProductName = "Video AI Analyzer"
